--- a/department-service.properties
+++ b/department-service.properties
@@ -6,4 +6,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 
 management.endpoints.web.exposure.include=*
+info.application.name=cc
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
