--- a/department-service.properties
+++ b/department-service.properties
@@ -4,6 +4,7 @@ spring.datasource.password=010719
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
+server.port=8091
 
 management.endpoints.web.exposure.include=*
 info.application.name=cc
