--- a/department-service.properties
+++ b/department-service.properties
@@ -7,5 +7,7 @@ spring.jpa.hibernate.ddl-auto=update
 server.port=8091
 
 management.endpoints.web.exposure.include=*
+management.endpoint.info.enabled=true
+
 info.app.name=${spring.application.name}
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
