--- a/department-service.properties
+++ b/department-service.properties
@@ -6,4 +6,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 server.port=8091
 
+management.endpoints.web.exposure.include=*
+management.info.env.enabled=true
+info.app.name=${spring.application.name}
+
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
