--- a/employee-service.properties
+++ b/employee-service.properties
@@ -7,4 +7,8 @@ spring.jpa.hibernate.ddl-auto=update
 
 server.port=8090
 
+management.endpoints.web.exposure.include=*
+management.info.env.enabled=true
+info.app.name=${spring.application.name}
+
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
