--- a/department-service.properties
+++ b/department-service.properties
@@ -9,5 +9,6 @@ server.port=8091
 management.endpoints.web.exposure.include=*
 management.info.env.enabled=true
 info.app.name=${spring.application.name}
+spring.boot.message= spring boot message
 
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
