--- a/employee-service.properties
+++ b/employee-service.properties
@@ -10,6 +10,6 @@ server.port=8090
 management.endpoints.web.exposure.include=*
 management.info.env.enabled=true
 info.app.name=${spring.application.name}
-spring.boot.message= spring boot message
+spring.boot.message= Hello,  Employee service
 
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
