--- a/employee-service.properties
+++ b/employee-service.properties
@@ -12,4 +12,8 @@ management.info.env.enabled=true
 info.app.name=${spring.application.name}
 spring.boot.message= Hello,  Employee service updated again
 
+management.tracing.sampling.probability=1.0 
+logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
+logging.level.org.springframework.web=DEBUG
+
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
