--- a/department-service.properties
+++ b/department-service.properties
@@ -15,4 +15,5 @@ management.tracing.sampling.probability=1.0
 logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
 logging.level.org.springframework.web=DEBUG
 
+eureka.instance.hostname=host.docker.internal
 eureka.instance.client.serverUrl.defaultZone=http://localhost:8761/eureka/
