--- a/employee-service.properties
+++ b/employee-service.properties
@@ -12,7 +12,8 @@ management.info.env.enabled=true
 info.app.name=${spring.application.name}
 spring.boot.message= Hello,  Employee service updated again
 
-management.tracing.sampling.probability=1.0 
+management.tracing.sampling.probability=1.0
+spring.zipkin.base-url=http://127.0.0.1:9411/
 logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
 logging.level.org.springframework.web=DEBUG
 
