--- a/department-service.properties
+++ b/department-service.properties
@@ -12,6 +12,7 @@ info.app.name=${spring.application.name}
 spring.boot.message= Hello,  Department service updated again
 
 management.tracing.sampling.probability=1.0 
+spring.zipkin.base-url=http://127.0.0.1:9411/
 logging.pattern.level=%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]
 logging.level.org.springframework.web=DEBUG
 
